--- a/3256419.html
+++ b/3256419.html
@@ -7,7 +7,7 @@
   <title>Durex</title>
 
   <!-- styles -->
-  <link rel="stylesheet" type="text/css" href="/assets/styles/style.css" />
+  <link rel="stylesheet" type="text/css" href="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/styles/style.css" />
 </head>
 
 <body>
@@ -26,12 +26,12 @@
           <p class="es-kv__text">Dodatkowo nawilżane</p>
         </div>
         <div class="es-kv__packshot">
-          <img src="/assets/img/packshot.png" alt="" class="es-kv__img es-kv__img-packshot" />
-          <img src="/assets/img/durex.png" alt="" class="es-kv__img es-kv__img-durex" />
+          <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/packshot.png" alt="" class="es-kv__img es-kv__img-packshot" />
+          <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/durex.png" alt="" class="es-kv__img es-kv__img-durex" />
         </div>
       </div>
       <div class="es-kv__photo">
-        <img src="/assets/img/photo.png" alt="" class="es-kv__img es-kv__img-photo" />
+        <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/photo.png" alt="" class="es-kv__img es-kv__img-photo" />
       </div>
     </section>
 
@@ -39,25 +39,25 @@
       <div class="es-features__container">
         <div class="es-features__feature es-feature">
           <div class="es-feature__icon">
-            <img src="./assets/img/icon-1.svg" alt="" class="es-feature__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/icon-1.svg" alt="" class="es-feature__img" />
           </div>
           <p class="es-feature__text"><strong class="es-feature__text--bold">rozmiar</strong> standardowy</p>
         </div>
         <div class="es-features__feature">
           <div class="es-feature__icon">
-            <img src="./assets/img/icon-2.svg" alt="" class="es-feature__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/icon-2.svg" alt="" class="es-feature__img" />
           </div>
           <p class="es-feature__text"><strong class="es-feature__text--bold">dodatkowy</strong> lubrykant</p>
         </div>
         <div class="es-features__feature">
           <div class="es-feature__icon">
-            <img src="./assets/img/icon-3.svg" alt="" class="es-feature__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/icon-3.svg" alt="" class="es-feature__img" />
           </div>
           <p class="es-feature__text"><strong class="es-feature__text--bold">grubość</strong> supercienkie</p>
         </div>
         <div class="es-features__feature">
           <div class="es-feature__icon">
-            <img src="./assets/img/icon-4.svg" alt="" class="es-feature__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/icon-4.svg" alt="" class="es-feature__img" />
           </div>
           <p class="es-feature__text"><strong class="es-feature__text--bold">kształt</strong> easy-on</p>
         </div>
@@ -69,7 +69,7 @@
       <div class="es-carousel-container">
         <div class="es-carousel">
           <div class="es-slide">
-            <img class="es-slide__img" src="/assets/img/slide-1.png" alt="Slide 1">
+            <img class="es-slide__img" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/slide-1.png" alt="Slide 1">
             <div class="es-slide__container">
               <p class="es-slide__title">Supercienkie</p>
               <div class="es-slide__text-container">
@@ -81,7 +81,7 @@
 
           </div>
           <div class="es-slide">
-            <img class="es-slide__img" src="/assets/img/slide-2.png" alt="Slide 2">
+            <img class="es-slide__img" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/slide-2.png" alt="Slide 2">
             <div class="es-slide__container">
               <p class="es-slide__title">Wysokiej jakości</p>
               <div class="es-slide__text-container">
@@ -92,7 +92,7 @@
             </div>
           </div>
           <div class="es-slide">
-            <img class="es-slide__img" src="/assets/img/slide-3.png" alt="Slide 3">
+            <img class="es-slide__img" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/slide-3.png" alt="Slide 3">
             <div class="es-slide__container">
               <p class="es-slide__title">Numer 1 na świecie*</p>
               <div class="es-slide__text-container es-slide__text-container--3">
@@ -104,8 +104,8 @@
           </div>
         </div>
         <div class="es-carousel-arrows">
-          <button class="es-prev-arrow"><img src="/assets/img/arrow.svg"></button>
-          <button class="es-next-arrow"><img src="/assets/img/arrow.svg"></button>
+          <button class="es-prev-arrow"><img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg"></button>
+          <button class="es-next-arrow"><img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg"></button>
         </div>
       </div>
     </section>
@@ -119,7 +119,7 @@
       </div>
 
       <div class="es-benefits__container">
-        <img src="./assets/img/benefits-condom.png" alt="" class="es-benefits__img">
+        <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/benefits-condom.png" alt="" class="es-benefits__img">
         <p class="es-benefits__benefit">gładkie</p>
         <div class="es-line es-line--1">&nbsp;</div>
         <p class="es-benefits__benefit">pokryte lubrykantem</p>
@@ -151,18 +151,18 @@
           </g>
         </svg>
         <div class="es-tip__container">
-          <img class="es-tip__img--top" src="/assets/img/top.png">
-          <img class="es-tip__img--bottom" src="/assets/img/bottom.png">
+          <img class="es-tip__img--top" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/top.png">
+          <img class="es-tip__img--bottom" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/bottom.png">
         </div>
       </div>
       <div class="es-info__container">
         <p class="es-info__title">Znajdź <strong class="es-info__title--strong">swój rozmiar</strong></p>
         <div class="es-info__desktop-container">
           <div class="es-info__chart-container">
-            <img class="es-info__chart es-info__chart-base" src="/assets/img/circle-base.png">
-            <img class="es-info__chart es-info__chart-S" src="/assets/img/circle-3.png">
-            <img class="es-info__chart es-info__chart-M" src="/assets/img/circle-4.png">
-            <img class="es-info__chart es-info__chart-L" src="/assets/img/circle-5.png">
+            <img class="es-info__chart es-info__chart-base" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/circle-base.png">
+            <img class="es-info__chart es-info__chart-S" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/circle-3.png">
+            <img class="es-info__chart es-info__chart-M" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/circle-4.png">
+            <img class="es-info__chart es-info__chart-L" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/circle-5.png">
           </div>
           <div class="es-info__size">
             <div class="es-info__size--top">
@@ -180,7 +180,7 @@
               </div>
             </div>
             <div class="es-info__size--bottom">
-              <img class="es-info__img" src="/assets/img/fit.png">
+              <img class="es-info__img" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/fit.png">
             </div>
           </div>
         </div>
@@ -189,7 +189,7 @@
 
     <section class="es-video">
       <div class="iframe-container">
-        <img src="/assets/img/poster.png" alt="" class="es-poster-image">
+        <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/poster.png" alt="" class="es-poster-image">
         <iframe id="YTplayer" src="https://www.youtube-nocookie.com/embed/92aWiL_wZyg?si=59LoopUym48M3CTk"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -201,9 +201,9 @@
       <h2 class="es-cross__title"><strong class="es-cross__strong">*Durex invisible to najcieńsze prezerwatywy
           w&nbsp;portfolio durex</strong>Stworzone, by czuć wszystko</h2>
       <div class="es-cross__container">
-        <a href="#" target="_blank" class="es-cross__product">
+        <a href="https://www.rossmann.pl/Produkt/Prezerwatywy/Durex-Invisible-Close-Fit-prezerwatywy-dopasowane-3-szt,342724,8447" target="_blank" class="es-cross__product">
           <div class="es-cross__packshot">
-            <img src="/assets/img/cross-1.png" alt="" class="es-cross__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/cross-1.png" alt="" class="es-cross__img" />
           </div>
           <div class="es-cross__text">
             <p class="es-cross__text--top">
@@ -215,9 +215,9 @@
           </div>
           <p class="es-cross__link">Sprawdź</p>
         </a>
-        <a href="#" target="_blank" class="es-cross__product">
+        <a href="https://www.rossmann.pl/Produkt/Prezerwatywy/Durex-Invisible-Extra-Lubricated-prezerwatywy-dodatkowo-nawilzane-3-szt,234213,8447" target="_blank" class="es-cross__product">
           <div class="es-cross__packshot">
-            <img src="./assets/img/cross-2.png" alt="" class="es-cross__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/cross-2.png" alt="" class="es-cross__img" />
           </div>
           <div class="es-cross__text">
             <p class="es-cross__text--top">
@@ -229,9 +229,9 @@
           </div>
           <p class="es-cross__link">Sprawdź</p>
         </a>
-        <a href="#" target="_blank" class="es-cross__product">
+        <a href="https://www.rossmann.pl/Produkt/Prezerwatywy/Durex-Invisible-prezerwatywy-XL-3-szt,342734,8447" target="_blank" class="es-cross__product">
           <div class="es-cross__packshot">
-            <img src="./assets/img/cross-3.png" alt="" class="es-cross__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/cross-3.png" alt="" class="es-cross__img" />
           </div>
           <div class="es-cross__text">
             <p class="es-cross__text--top">
@@ -255,7 +255,7 @@
               Dlaczego warto używać produktów Durex?
             </h5>
             <button class="es-faq__arrow">
-              <img src="../assets/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -284,7 +284,7 @@
               Jakim testom jakości poddawane są prezerwatywy Durex?
             </h5>
             <button class="es-faq__arrow">
-              <img src="../assets/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -327,7 +327,7 @@
               Czy cieńsze prezerwatywy są bardziej narażone na pękanie?
             </h5>
             <button class="es-faq__arrow">
-              <img src="../assets/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -344,7 +344,7 @@
               prysznic?
             </h5>
             <button class="es-faq__arrow">
-              <img src="../assets/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -370,7 +370,7 @@
               Czy mogę używać prezerwatyw do seksu analnego?
             </h5>
             <button class="es-faq__arrow">
-              <img src="../assets/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -391,7 +391,7 @@
               Czy można stosować lubrykanty wraz z prezerwatywami?
             </h5>
             <button class="es-faq__arrow">
-              <img src="../assets/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -412,7 +412,7 @@
               Dlaczego należy stosować lubrykanty?
             </h5>
             <button class="es-faq__arrow">
-              <img src="../assets/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -439,13 +439,13 @@
     </section>
 
   </div>
-  <script src="/assets/js/scrollmagic.min.js"></script>
-  <script src="/assets/js/animations.min.js"></script>
-  <script src="/assets/js/slider.js"></script>
-  <script src="/assets/js/open.js"></script>
+  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/js/scrollmagic.min.js"></script>
+  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/js/animations.min.js"></script>
+  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/js/slider.js"></script>
+  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/js/open.js"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
-  <script src="/assets/js/posterVideo.js"></script>
-  <script src="/assets/js/faq.min.js"></script>
+  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/js/posterVideo.js"></script>
+  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/js/faq.min.js"></script>
 </body>
 
 </html>
