--- a/Portals/0/rich-content/durex/5052197048988.html
+++ b/Portals/0/rich-content/durex/5052197048988.html
@@ -5,9 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Durex</title>
-
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@300;500;600;800&family=Encode+Sans:wght@100;500&display=swap" rel="stylesheet">
   <!-- styles -->
-  <link rel="stylesheet" type="text/css" href="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/styles/style.css" />
+  <link rel="stylesheet" type="text/css" href="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/styles/style.css" />
 </head>
 
 <body>
@@ -26,12 +29,12 @@
           <p class="es-kv__text">Dodatkowo nawilżane</p>
         </div>
         <div class="es-kv__packshot">
-          <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/packshot.png" alt="" class="es-kv__img es-kv__img-packshot" />
-          <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/durex.png" alt="" class="es-kv__img es-kv__img-durex" />
+          <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/packshot.png" alt="" class="es-kv__img es-kv__img-packshot" />
+          <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/durex.png" alt="" class="es-kv__img es-kv__img-durex" />
         </div>
       </div>
       <div class="es-kv__photo">
-        <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/photo.png" alt="" class="es-kv__img es-kv__img-photo" />
+        <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/photo.png" alt="" class="es-kv__img es-kv__img-photo" />
       </div>
     </section>
 
@@ -39,25 +42,25 @@
       <div class="es-features__container">
         <div class="es-features__feature es-feature">
           <div class="es-feature__icon">
-            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/icon-1.svg" alt="" class="es-feature__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/icon-1.svg" alt="" class="es-feature__img" />
           </div>
           <p class="es-feature__text"><strong class="es-feature__text--bold">rozmiar</strong> standardowy</p>
         </div>
         <div class="es-features__feature">
           <div class="es-feature__icon">
-            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/icon-2.svg" alt="" class="es-feature__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/icon-2.svg" alt="" class="es-feature__img" />
           </div>
           <p class="es-feature__text"><strong class="es-feature__text--bold">dodatkowy</strong> lubrykant</p>
         </div>
         <div class="es-features__feature">
           <div class="es-feature__icon">
-            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/icon-3.svg" alt="" class="es-feature__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/icon-3.svg" alt="" class="es-feature__img" />
           </div>
           <p class="es-feature__text"><strong class="es-feature__text--bold">grubość</strong> supercienkie</p>
         </div>
         <div class="es-features__feature">
           <div class="es-feature__icon">
-            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/icon-4.svg" alt="" class="es-feature__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/icon-4.svg" alt="" class="es-feature__img" />
           </div>
           <p class="es-feature__text"><strong class="es-feature__text--bold">kształt</strong> easy-on</p>
         </div>
@@ -69,7 +72,7 @@
       <div class="es-carousel-container">
         <div class="es-carousel">
           <div class="es-slide">
-            <img class="es-slide__img" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/slide-1.png" alt="Slide 1">
+            <img class="es-slide__img" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/slide-1.png" alt="Slide 1">
             <div class="es-slide__container">
               <p class="es-slide__title">Supercienkie</p>
               <div class="es-slide__text-container">
@@ -81,7 +84,7 @@
 
           </div>
           <div class="es-slide">
-            <img class="es-slide__img" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/slide-2.png" alt="Slide 2">
+            <img class="es-slide__img" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/slide-2.png" alt="Slide 2">
             <div class="es-slide__container">
               <p class="es-slide__title">Wysokiej jakości</p>
               <div class="es-slide__text-container">
@@ -92,7 +95,7 @@
             </div>
           </div>
           <div class="es-slide">
-            <img class="es-slide__img" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/slide-3.png" alt="Slide 3">
+            <img class="es-slide__img" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/slide-3.png" alt="Slide 3">
             <div class="es-slide__container">
               <p class="es-slide__title">Numer 1 na świecie*</p>
               <div class="es-slide__text-container es-slide__text-container--3">
@@ -104,8 +107,8 @@
           </div>
         </div>
         <div class="es-carousel-arrows">
-          <button class="es-prev-arrow"><img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg"></button>
-          <button class="es-next-arrow"><img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg"></button>
+          <button class="es-prev-arrow"><img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg"></button>
+          <button class="es-next-arrow"><img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg"></button>
         </div>
       </div>
     </section>
@@ -119,7 +122,7 @@
       </div>
 
       <div class="es-benefits__container">
-        <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/benefits-condom.png" alt="" class="es-benefits__img">
+        <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/benefits-condom.png" alt="" class="es-benefits__img">
         <p class="es-benefits__benefit">gładkie</p>
         <div class="es-line es-line--1">&nbsp;</div>
         <p class="es-benefits__benefit">pokryte lubrykantem</p>
@@ -151,18 +154,18 @@
           </g>
         </svg>
         <div class="es-tip__container">
-          <img class="es-tip__img--top" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/top.png">
-          <img class="es-tip__img--bottom" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/bottom.png">
+          <img class="es-tip__img--top" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/top.png">
+          <img class="es-tip__img--bottom" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/bottom.png">
         </div>
       </div>
       <div class="es-info__container">
         <p class="es-info__title">Znajdź <strong class="es-info__title--strong">swój rozmiar</strong></p>
         <div class="es-info__desktop-container">
           <div class="es-info__chart-container">
-            <img class="es-info__chart es-info__chart-base" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/circle-base.png">
-            <img class="es-info__chart es-info__chart-S" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/circle-3.png">
-            <img class="es-info__chart es-info__chart-M" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/circle-4.png">
-            <img class="es-info__chart es-info__chart-L" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/circle-5.png">
+            <img class="es-info__chart es-info__chart-base" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/circle-base.png">
+            <img class="es-info__chart es-info__chart-S" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/circle-3.png">
+            <img class="es-info__chart es-info__chart-M" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/circle-4.png">
+            <img class="es-info__chart es-info__chart-L" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/circle-5.png">
           </div>
           <div class="es-info__size">
             <div class="es-info__size--top">
@@ -180,7 +183,7 @@
               </div>
             </div>
             <div class="es-info__size--bottom">
-              <img class="es-info__img" src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/fit.png">
+              <img class="es-info__img" src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/fit.png">
             </div>
           </div>
         </div>
@@ -189,7 +192,7 @@
 
     <section class="es-video">
       <div class="iframe-container">
-        <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/poster.png" alt="" class="es-poster-image">
+        <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/poster.png" alt="" class="es-poster-image">
         <iframe id="YTplayer" src="https://www.youtube-nocookie.com/embed/92aWiL_wZyg?si=59LoopUym48M3CTk"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -203,7 +206,7 @@
       <div class="es-cross__container">
         <a href="https://www.rossmann.pl/Produkt/Prezerwatywy/Durex-Invisible-Close-Fit-prezerwatywy-dopasowane-3-szt,342724,8447" target="_blank" class="es-cross__product">
           <div class="es-cross__packshot">
-            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/cross-1.png" alt="" class="es-cross__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/cross-1.png" alt="" class="es-cross__img" />
           </div>
           <div class="es-cross__text">
             <p class="es-cross__text--top">
@@ -217,7 +220,7 @@
         </a>
         <a href="https://www.rossmann.pl/Produkt/Prezerwatywy/Durex-Invisible-Extra-Lubricated-prezerwatywy-dodatkowo-nawilzane-3-szt,234213,8447" target="_blank" class="es-cross__product">
           <div class="es-cross__packshot">
-            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/cross-2.png" alt="" class="es-cross__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/cross-2.png" alt="" class="es-cross__img" />
           </div>
           <div class="es-cross__text">
             <p class="es-cross__text--top">
@@ -231,7 +234,7 @@
         </a>
         <a href="https://www.rossmann.pl/Produkt/Prezerwatywy/Durex-Invisible-prezerwatywy-XL-3-szt,342734,8447" target="_blank" class="es-cross__product">
           <div class="es-cross__packshot">
-            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/cross-3.png" alt="" class="es-cross__img" />
+            <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/cross-3.png" alt="" class="es-cross__img" />
           </div>
           <div class="es-cross__text">
             <p class="es-cross__text--top">
@@ -255,7 +258,7 @@
               Dlaczego warto używać produktów Durex?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -284,7 +287,7 @@
               Jakim testom jakości poddawane są prezerwatywy Durex?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -327,7 +330,7 @@
               Czy cieńsze prezerwatywy są bardziej narażone na pękanie?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -344,7 +347,7 @@
               prysznic?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -370,7 +373,7 @@
               Czy mogę używać prezerwatyw do seksu analnego?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -391,7 +394,7 @@
               Czy można stosować lubrykanty wraz z prezerwatywami?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -412,7 +415,7 @@
               Dlaczego należy stosować lubrykanty?
             </h5>
             <button class="es-faq__arrow">
-              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/img/arrow.svg" alt="" class="es-faq__img" />
+              <img src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/img/arrow.svg" alt="" class="es-faq__img" />
             </button>
           </div>
           <div class="es-faq__content es-faq__content--closed">
@@ -439,13 +442,13 @@
     </section>
 
   </div>
-  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/js/scrollmagic.min.js"></script>
-  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/js/animations.min.js"></script>
-  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/js/slider.js"></script>
-  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/js/open.js"></script>
+  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/js/scrollmagic.min.js"></script>
+  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/js/animations.min.js"></script>
+  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/js/slider.js"></script>
+  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/js/open.js"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
-  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/js/posterVideo.js"></script>
-  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/3256419/js/faq.min.js"></script>
+  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/js/posterVideo.js"></script>
+  <script src="https://www.ros.net.pl/Portals/0/rich-content/durex/5052197048988/js/faq.min.js"></script>
 </body>
 
 </html>
